--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -14,6 +14,11 @@ jobs:
       with:
         python-version: '3.9'  # Usar Python 3.9
 
+    - name: Set up Node.js environment
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'  # Usar Node.js versión 16
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
