--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,7 +17,10 @@ jobs:
     - name: Set up Node.js environment
       uses: actions/setup-node@v2
       with:
-        node-version: '16'  # Usar Node.js versión 16
+        node-version: '20'  # Usar Node.js versión 16
+
+    - name: List files in the repository
+      run: ls -R
 
     - name: Install dependencies
       run: |
