--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Instalar dependencias desde requirements.txt
+        pip install -r $PWD/requirements.txt  # Instalar dependencias desde requirements.txt
 
     - name: Run tests
       run: pytest
