--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -20,7 +20,7 @@ jobs:
         node-version: '20'  # Usar Node.js versión 16
 
     - name: List files in directory
-      run: ls $PWD
+      run: ls -la $PWD
 
     - name: Install dependencies
       run: |
