--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -9,25 +9,23 @@ jobs:
 
     runs-on: ubuntu-latest  # Sistema operativo Ubuntu
 
+
     steps:
-    - uses: actions/setup-python@v2
-      with:
-        python-version: '3.9'  # Usar Python 3.9
+      - uses: actions/checkout@v3
+      - name: setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'  # Usar Python 3.9
 
-    - name: Set up Node.js environment
-      uses: actions/setup-node@v2
-      with:
-        node-version: '20'  # Usar Node.js versión 16
-
-    - name: Check current directory
-      run: |
-        pwd
-        ls -la $PWD
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        # pip install -r $PWD/requirements.txt  # Instalar dependencias desde requirements.txt
-
-    - name: Run tests
-      run: pytest
+      - name: Check current directory
+        run: |
+          pwd
+          ls -la $PWD
+  
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          # pip install -r $PWD/requirements.txt  # Instalar dependencias desde requirements.txt
+  
+      - name: Run tests
+        run: pytest
